--- a/PROGRAM/app/src/main/res/values/strings.xml
+++ b/PROGRAM/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="head_title_home">SeaCare</string>
+    <string name="informasi_laut">Indonesia adalah negara .....</string>
 </resources>
