clara : menambahkan ScrollView dan TeksView pada fragment_btn

--- a/PROGRAM/app/src/main/res/values/strings.xml
+++ b/PROGRAM/app/src/main/res/values/strings.xml
@@ -3,5 +3,16 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="head_title_home">SeaCare</string>
-    <string name="informasi_laut">Indonesia adalah negara .....</string>
+    <string name="informasi_text">1. Laut di Indonesia</string>
+    <string name="informasi_text2">Menurut Kementerian Kelautan dan Perikanan, terdapat 12 laut di Indonesia, yaitu: Laut Jawa, Laut Natuna Utara, Laut Sulawesi, Laut Maluku, Laut Banda, Laut Arafura, Laut Flores, Laut Sawu, Laut Timor, Laut Seram, Laut Halmahera, Laut China Selatan</string>
+    <string name="informasi_text3">2. Luas Laut</string>
+    <string name="informasi_text3a">Laut terluas di Indonesia adalah Laut Cina Selatan dengan luas mencapai 1.652.000 km2. Disusul oleh Laut Arafura (1.033.000 km2) dan Laut Maluku (975.000 km2).</string>
+    <string name="informasi_text4">3. Kedalaman Laut</string>
+    <string name="informasi_text4a">Laut terdalam di Indonesia adalah Laut Banda dengan kedalaman mencapai 7.238 meter. Disusul oleh Laut Sulawesi (5.100 meter) dan Laut Flores (4.900 meter).</string>
+    <string name="informasi_text5">4. Keanekaragaman Hayati</string>
+    <string name="informasi_text5a">Laut di Indonesia memiliki keanekaragaman hayati yang sangat tinggi. Hal ini menjadikan Indonesia sebagai salah satu pusat keanekaragaman hayati laut di dunia. Menurut Kementerian Kelautan dan Perikanan, terdapat sekitar 5.500 spesies ikan, 3.200 spesies terumbu karang, dan 600 spesies moluska di laut Indonesia.</string>
+    <string name="informasi_text6">5. Potensi Ekonomi</string>
+    <string name="informasi_text6a">Laut di Indonesia memiliki potensi ekonomi yang sangat besar. Sektor kelautan dan perikanan merupakan salah satu sektor penyumbang Produk Domestik Bruto (PDB) terbesar di Indonesia. Selain itu, laut juga menjadi sumber daya alam yang penting untuk berbagai sektor, seperti pariwisata, industri, dan energi.</string>
+    <string name="informasi_text7">6. Tantangan</string>
+    <string name="informasi_text7a">Meskipun memiliki potensi besar, laut di Indonesia juga menghadapi berbagai tantangan, seperti pencemaran laut, penangkapan ikan berlebihan, dan kerusakan terumbu karang. Untuk itu, diperlukan upaya pengelolaan laut yang berkelanjutan agar laut Indonesia dapat terus memberikan manfaat bagi generasi sekarang dan mendatang.</string>
 </resources>
